src/main/java/com/example/voting_system/error/IllegalRequestDataException.java
package com.example.voting_system.error;

public class IllegalRequestDataException extends AppException{
    public IllegalRequestDataException(String message) {
        super(message);
    }
}
